--- a/intro/index.html
+++ b/intro/index.html
@@ -9,11 +9,11 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
     integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
-	<link rel="stylesheet" href="/css/bootstrap.min.css">
-	<link rel="stylesheet" href="/css/intro/style.css">
-	<link rel="stylesheet" href="/css/intro/base-style.css">
-	<link rel="stylesheet" href="/css/intro/scroll-down.css">
-	<link rel="stylesheet" href="/css/intro/team.css">
+	<link rel="stylesheet" href="../css/bootstrap.min.css">
+	<link rel="stylesheet" href="../css/intro/style.css">
+	<link rel="stylesheet" href="../css/intro/base-style.css">
+	<link rel="stylesheet" href="../css/intro/scroll-down.css">
+	<link rel="stylesheet" href="../css/intro/team.css">
 
 </head>
 
@@ -217,8 +217,8 @@
     <p class="copy">2019 © Copyright 台灣人工智慧學校 | Taiwan AI Academy </p>
   </div>
 
-	<script src="/js/intro/checkDevice.js"></script>
-	<script src="/js/intro/index.js"></script>
+	<script src="../js/intro/checkDevice.js"></script>
+	<script src="../js/intro/index.js"></script>
 
 </body>
 
