modify image locat

--- a/intro/index.html
+++ b/intro/index.html
@@ -73,11 +73,11 @@
 			</article>
 		</div>
 		<div class="grid-item grid-item--secondary">
-			<img src="../../../image/demo/demo8.gif" class="object-fit" alt="chair">
+			<img src="../image/demo/demo8.gif" class="object-fit" alt="chair">
 		</div>
 		<div class="grid-item grid-item--tertiary">
 			<!-- 舞動 -->
-			<img src="../../../image/demo/demo1.gif" class="object-fit" alt="chair">
+			<img src="../image/demo/demo1.gif" class="object-fit" alt="chair">
 		</div>
 		<div class="grid-item grid-item--tertiary grid-item--content">
 			<article class="article">
@@ -86,7 +86,7 @@
 		</div>
 		<div class="grid-item grid-item--tertiary">
 			<!-- 孫中山 -->
-			<img src="../../../image/demo/demo4.gif" class="object-fit" alt="chair">
+			<img src="../image/demo/demo4.gif" class="object-fit" alt="chair">
 		</div>
 	</header>
 	<section class="section1" id="section1">
