--- a/intro/index.html
+++ b/intro/index.html
@@ -21,7 +21,7 @@
 	<!-- Init Animation -->
 	<div class="loading-overlay d-none" id="loadingOverlay">
 		<span class="loading-overlay__content h1">
-			<img src="/image/logo.png" alt="">
+			<img src="../image/logo.png" alt="">
 		</span>
 	</div>
 	<div class="loading_mobile d-none" id="loadingMobile">
@@ -158,7 +158,7 @@
 				<div class="col-md-4">
 					<div class="team-member">
 						<figure>
-							<img src="/material/team-member-profile-display/dist/image/profile1.png" alt="" class="img-responsive">
+							<img src="../material/team-member-profile-display/dist/image/profile1.png" alt="" class="img-responsive">
 							<figcaption>
 								<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Recusandae asperiores mollitia.</p>
 								<ul>
@@ -176,7 +176,7 @@
 				<div class="col-md-4">
 					<div class="team-member">
 						<figure>
-							<img src="/material/team-member-profile-display/dist/image/profile2.png" alt="" class="img-responsive">
+							<img src="../material/team-member-profile-display/dist/image/profile2.png" alt="" class="img-responsive">
 							<figcaption>
 								<p>Neque minima ea, a praesentium saepe nihil maxime quod esse numquam explicabo eligendi.</p>
 								<ul>
@@ -194,7 +194,7 @@
 				<div class="col-md-4">
 					<div class="team-member">
 						<figure>
-							<img src="/material/team-member-profile-display/dist/image/profile3.png" alt="" class="img-responsive">
+							<img src="../material/team-member-profile-display/dist/image/profile3.png" alt="" class="img-responsive">
 							<figcaption>
 								<p>Temporibus dolor, quisquam consectetur molestias, veniam voluptatum. Beatae alias omnis totam.</p>
 								<ul>
